# pet

./: LICENSE  pyproject.toml
chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py
static/js/: script.js
staticfiles/js/: script.js
templates/chat/: room.html
