[project]
name = "chat"
version = "5.2.5"
description = ""
authors = [
    {name = "yokzzgit",email = "mryokzminecraft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne] (>=4.3.1,<5.0.0)",
    "django (>=5.2.5,<6.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
